[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instaparser"
dynamic = ["version"]
description = "Official Python client library for the Instaparser API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Instapaper", email = "support@instaparser.com" },
]
keywords = ["instaparser", "article", "parser", "web-scraping", "content-extraction", "pdf", "summarization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Markup :: HTML",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.25.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "types-requests",
]
build = [
    "build>=1.4.0",
    "twine>=6.2.0"
]

[project.urls]
Homepage = "https://instaparser.com"
Documentation = "https://instaparser.com/docs"
Repository = "https://github.com/Instapaper/instaparser-python.git"
Issues = "https://github.com/Instapaper/instaparser-python/issues"
Changelog = "https://github.com/Instapaper/instaparser-python/blob/main/CHANGELOG.md"

[tool.hatch.version]
path = "instaparser/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "instaparser/",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["instaparser"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["N802"]
